--- a/packages/deploy/src/data/deploy/goerli/config.json
+++ b/packages/deploy/src/data/deploy/goerli/config.json
@@ -48,7 +48,9 @@
         "priceAgo": "15 min",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
-        "positionMinAmount": "0.001"
+        "positionMinAmount": "0.001",
+        "baseLimit": "10000",
+        "quoteLimit": "20000000"
       }
     }
   ]
