--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -23,6 +23,7 @@
     "@marginly/contracts": "0.1.0",
     "@uniswap/v3-core": "^1.0.1",
     "@openzeppelin/contracts": "^4.8.0",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "fs-extra": "^11.1.0"
   }
 }
