--- a/packages/keeper/package.json
+++ b/packages/keeper/package.json
@@ -14,7 +14,9 @@
   "author": "EqLab",
   "license": "MIT",
   "dependencies": {
-    "@marginly/common": "0.1.0"
+    "@marginly/common": "0.1.0",
+    "commander": "^8.1.0",
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.0",
