--- a/packages/keeper/src/data/config.json
+++ b/packages/keeper/src/data/config.json
@@ -2,8 +2,7 @@
   "systemContextDefaults": {
     "ethNodeUri": "https://rpc.ankr.com/eth_goerli"
   },
-  "aavePoolAdressesProviderAddress": "0xb13Cfa6f8B2Eed2C37fB00fF0c1A59807C585810",
-  "uniswapRouterContractAddress": "0xE592427A0AEce92De3Edee1F18E0157C05861564",
+  "keeperAddress": "",
   "marginlyPools": [
     {
       "address": "0x...",
