--- a/packages/deploy/src/data/deploy/ethereum/config.json
+++ b/packages/deploy/src/data/deploy/ethereum/config.json
@@ -86,5 +86,9 @@
         "positionMinAmount": "0.001"
       }
     }
-  ]
+  ],
+  "marginlyWrapper": {
+    "pools": ["usdc-weth", "wbtc-usdc"],
+    "address": ""
+  }
 }
