--- a/packages/deploy/src/data/deploy/goerli/config.json
+++ b/packages/deploy/src/data/deploy/goerli/config.json
@@ -53,5 +53,9 @@
         "quoteLimit": "20000000"
       }
     }
-  ]
+  ],
+  "marginlyWrapper": {
+    "pools": ["usdc-weth"],
+    "address": ""
+  }
 }
