add cli-common package

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "EqLab",
   "private": true,
   "scripts": {
-    "build": "yarn workspace @marginly/contracts install && yarn workspace @marginly/contracts compile && yarn workspace @marginly/deploy install && yarn workspace @marginly/deploy build && yarn workspace @marginly/cli install && yarn workspace @marginly/cli build && yarn workspace @marginly/int-tests install && yarn workspace @marginly/int-tests compile && yarn workspace @marginly/int-tests build && yarn workspace @marginly/frontend install && yarn workspace @marginly/frontend build && yarn workspace @marginly/keeper-contracts install && yarn workspace @marginly/keeper-contracts compile"
+    "build": "yarn workspace @marginly/contracts install &&  yarn workspace @marginly/common install && yarn workspace @marginly/common build && yarn workspace @marginly/cli-common install && yarn workspace @marginly/cli-common build && yarn workspace @marginly/contracts compile && yarn workspace @marginly/deploy install && yarn workspace @marginly/deploy build && yarn workspace @marginly/cli install && yarn workspace @marginly/cli build && yarn workspace @marginly/int-tests install && yarn workspace @marginly/int-tests compile && yarn workspace @marginly/int-tests build && yarn workspace @marginly/frontend install && yarn workspace @marginly/frontend build && yarn workspace @marginly/keeper-contracts install && yarn workspace @marginly/keeper-contracts compile && yarn workspace @marginly/keeper install && yarn workspace @marginly/keeper build"
   },
   "workspaces": [
     "packages/*"
