--- a/packages/cli-common/tsconfig.json
+++ b/packages/cli-common/tsconfig.json
@@ -7,6 +7,11 @@
       "rootDir": "src",
       "resolveJsonModule": true
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "src/**/*.json"],
+    "references": [
+      {
+        "path": "../common"
+      },
+    ]
   }
   
