--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -21,7 +21,10 @@
   ],
   "references": [
     {
-      "path": "../deploy"
+      "path": "../deploy",
+    },
+    {
+      "path": "../common"
     }
   ]
 }
