--- a/packages/cli-common/package.json
+++ b/packages/cli-common/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "@marginly/deploy",
+  "name": "@marginly/cli-common",
   "version": "0.1.0",
-  "description": "Marginly Deploy",
   "main": "dist/index.js",
   "author": "EqLab",
   "license": "MIT",
   "scripts": {
-    "build": "tsc --build",
-    "start": "node dist/index.js",
-    "lint": "eslint src --ext .ts",
-    "prettify": "prettier --write ."
+    "build": "tsc --build"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.0",
@@ -20,11 +16,12 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
-    "@marginly/contracts": "0.1.0",
-    "@marginly/cli-common": "0.1.0",
-    "@uniswap/v3-core": "^1.0.1",
-    "@openzeppelin/contracts": "^4.8.0",
+    "@marginly/common": "0.1.0",
     "ethers": "^5.7.2",
-    "fs-extra": "^11.1.0"
+    "fs-extra": "^11.1.0",
+    "commander": "^8.1.0",
+    "ganache": "^7.7.3",
+    "prompts": "^2.4.2",
+    "read": "^2.0.0"
   }
 }
