--- a/packages/keeper/package.json
+++ b/packages/keeper/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@marginly/common": "0.1.0",
+    "@marginly/cli-common": "0.1.0",
     "commander": "^8.1.0",
     "ethers": "^5.7.2"
   },
