--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "@aave/core-v3": "1.17.2",
     "@marginly/contracts": "0.1.0",
     "@uniswap/v3-core": "^1.0.1",
     "@openzeppelin/contracts": "^4.8.0",
