--- a/packages/deploy/src/data/deploy/ganache/config.json
+++ b/packages/deploy/src/data/deploy/ganache/config.json
@@ -62,7 +62,7 @@
   },
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
-      "allowCreateMock": true
+      "address": "0x2f39d218133AFaB8F2B819B1066c7E434Ad94E9e"
     }
   }
 }
