--- a/packages/keeper/package.json
+++ b/packages/keeper/package.json
@@ -14,6 +14,7 @@
   "author": "EqLab",
   "license": "MIT",
   "dependencies": {
+    "@marginly/contracts":"0.1.0",
     "@marginly/common": "0.1.0",
     "@marginly/cli-common": "0.1.0",
     "commander": "^8.1.0",
