--- a/packages/keeper/config.example.json
+++ b/packages/keeper/config.example.json
@@ -2,12 +2,17 @@
   "systemContextDefaults": {
     "ethNodeUri": "https://ganache-node.equilab.io"
   },
-  "keeperAddress": "0x003E10B715bF75dC0a956d586e0e7CA6D8f2f234",
+  "connection": {
+    "ethOptions": {
+      "gasPrice": 700000
+    }
+  },
+  "marginlyKeeperAddress": "0x13d1bD42884585d0D00121E596b3733B47152FeB",
   "marginlyPools": [
     {
-      "address": "0x003E10B715bF75dC0a956d586e0e7CA6D8f2f234",
-      "minProfitQuote": "200",
-      "minProfitBase": "0.15"
+      "address": "0x7D3c686CeaFD6e36198BA2fE96091c9eB5FBbd45",
+      "minProfitQuote": "20",
+      "minProfitBase": "0.05"
     }
   ]
 }
