changed wrapper deploy

--- a/packages/deploy/src/data/deploy/arbitrum/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum/config.json
@@ -122,7 +122,8 @@
     }
   ],
   "marginlyWrapper": {
-    "pools": ["usdc-weth", "arb-weth", "gmx-weth"]
+    "pools": ["usdc-weth", "arb-weth", "gmx-weth"],
+    "wethTokenId": "weth"
   },
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
