--- a/packages/deploy/src/data/deploy/ganache/config.json
+++ b/packages/deploy/src/data/deploy/ganache/config.json
@@ -58,7 +58,8 @@
     }
   ],
   "marginlyWrapper": {
-    "pools": ["usdc-weth"]
+    "pools": ["usdc-weth"],
+    "wethTokenId": "weth"
   },
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
