--- a/packages/deploy/src/data/deploy/goerli/config.json
+++ b/packages/deploy/src/data/deploy/goerli/config.json
@@ -55,7 +55,8 @@
     }
   ],
   "marginlyWrapper": {
-    "pools": ["usdc-weth"]
+    "pools": ["usdc-weth"],
+    "wethTokenId": "weth"
   },
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
