renaming weth to weth9

--- a/packages/deploy/src/data/deploy/ethereum/config.json
+++ b/packages/deploy/src/data/deploy/ethereum/config.json
@@ -155,7 +155,7 @@
   ],
   "marginlyWrapper": {
     "pools": ["usdc-weth", "usdc-usdt", "usdc-blur", "ldo-weth"],
-    "wethTokenId": "weth"
+    "weth9TokenId": "weth"
   },
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
