--- a/packages/deploy/src/data/deploy/ganache/config.json
+++ b/packages/deploy/src/data/deploy/ganache/config.json
@@ -59,7 +59,7 @@
   ],
   "marginlyWrapper": {
     "pools": ["usdc-weth"],
-    "wethTokenId": "weth"
+    "weth9TokenId": "weth"
   },
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
