--- a/packages/deploy/src/data/deploy/goerli/config.json
+++ b/packages/deploy/src/data/deploy/goerli/config.json
@@ -56,7 +56,7 @@
   ],
   "marginlyWrapper": {
     "pools": ["usdc-weth"],
-    "wethTokenId": "weth"
+    "weth9TokenId": "weth"
   },
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
