--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
