--- a/packages/oracle/package.json
+++ b/packages/oracle/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@marginly/logger": "^1.0.0",
+    "@marginly/logger-node": "^1.0.0",
     "@marginly/common": "^0.1.0",
     "yargs": "^13.3.2",
     "node-fetch": "^2.6.9"
