--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,4 +28,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags:  ${{ GITHUB_REPOSITORY }}:latest
+          tags:  ${{ github.repository }}:latest
