--- a/packages/deploy/src/data/deploy/arbitrum/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum/config.json
@@ -11,7 +11,8 @@
     "swapRouter": "0xE592427A0AEce92De3Edee1F18E0157C05861564"
   },
   "marginlyFactory": {
-    "feeHolder": "0x4c576Bf4BbF1d9AB9c359414e5D2b466bab085fa"
+    "feeHolder": "0x4c576Bf4BbF1d9AB9c359414e5D2b466bab085fa",
+    "wethTokenId": "weth"
   },
   "tokens": [
     {
@@ -74,7 +75,6 @@
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
-        "recoveryMaxLeverage": "17",
         "swapFee": "0.1%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
@@ -92,7 +92,6 @@
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
-        "recoveryMaxLeverage": "17",
         "swapFee": "0.1%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
@@ -110,7 +109,6 @@
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
-        "recoveryMaxLeverage": "17",
         "swapFee": "0.1%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
@@ -121,9 +119,6 @@
       }
     }
   ],
-  "marginlyWrapper": {
-    "pools": ["usdc-weth", "arb-weth", "gmx-weth"]
-  },
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
       "address": "0xa97684ead0e402dc232d5a977953df7ecbab3cdb"
