--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -77,6 +77,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ${{ env.HELM_REPOSITORY }}
+        ref: 'main'
     - name: 'deploy'
       run: |
         helm upgrade -i $SERVICE_NAME \
