--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ env:
   CLUSTER: kube
   NAMESPACE: eth-backend-test
   IMAGE_TAG: $CI_COMMIT_SHORT_SHA
-  
+  GH_SECR: github-marginly
   LIMIT_CPU: "500m"
   LIMIT_MEMORY: "512Mi"
   HELM_REPOSITORY: "eq-lab/devops-helm-charts-deploy"
@@ -21,43 +21,42 @@ env:
 
 
 jobs:
-  # build-image:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     -
-  #       name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v2
-  #     -
-  #       name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
-  #     -
-  #       name: Login to GitHub Container Registry
-  #       uses: docker/login-action@v2
-  #       with:
-  #         registry: ${{ env.REGISTRY }}
-  #         username: ${{ github.actor }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
-  #     -
-  #       name: Build and push
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         push: true
-  #         tags:  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+  build-image:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags:  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
   
 
   deployment:
-    # needs: build-image
+    needs: build-image
     runs-on: 'ubuntu-latest'
     steps:
     - uses: azure/setup-kubectl@v3
       with:
-        version: 'latest' # default is latest stable
+        version: '1.27.1'
       id: install
     - uses: azure/setup-helm@v3
       with:
-        version: 'latest' # default is latest (stable)
-        token: ${{ secrets.GITHUB_TOKEN }} # only needed if version is 'latest'
-    - name: 'Add Helm repo'
+        version: '3.12'
+    - name: 'Clone Helm repository'
       uses: actions/checkout@v3
       with:
         repository: ${{ env.HELM_REPOSITORY }}
@@ -74,31 +73,28 @@ jobs:
           method: kubeconfig
           kubeconfig: ${{ secrets.KUBECONFIG }}
           context: ${{ env.CLUSTER }}
-    - name: 'use-context'
-      run: kubectl config use-context $CLUSTER
-    - name: 'set-context'
-      run: kubectl config set-context --current --namespace=$NAMESPACE
+    # - name: 'use-context'
+    #   run: kubectl config use-context $CLUSTER
+    # - name: 'Set context'
+    #   run: kubectl config set-context --current --namespace=$NAMESPACE
     - name: Set imagePullSecret
       uses: azure/k8s-create-secret@v4
       with:
         namespace: ${{ env.NAMESPACE }}
-        secret-name: 'github-marg'
+        secret-name: ${{ env.GH_SECR }}
         container-registry-url: ${{ env.REGISTRY }}
         container-registry-username: ${{ github.actor }}
         container-registry-password: ${{ secrets.GITHUB_TOKEN }}
       id: create-secret
-    - name: 'FULL_IMAGE_NAME'
-      run: export FULL_IMAGE_NAME=$REGISTRY/$IMAGE_NAME:latest
     - name: 'deploy'
       run: |
-        ls -la
         helm upgrade -i $SERVICE_NAME \
           --set fullnameOverride=$SERVICE_NAME \
           --set service.enabled=true \
           --set service.port=80 \
           --set service.targetport=80 \
           --set image.repository=$DOCKER_REGISTRY \
-          --set image.name=$FULL_IMAGE_NAME \
+          --set image.name=$REGISTRY/$IMAGE_NAME:latest \
           --set image.tag=$IMAGE_TAG \
           --set resources.limits.cpu=$LIMIT_CPU \
           --set resources.limits.memory=$LIMIT_MEMORY \
