--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Marginly Image CI
 
 on:
   push:
@@ -24,21 +24,17 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
@@ -51,11 +47,11 @@ jobs:
     steps:
     - uses: azure/setup-kubectl@v3
       with:
-        version: '1.27.1'
+        version: 'v1.27.1'
       id: install
     - uses: azure/setup-helm@v3
       with:
-        version: '3.12'
+        version: 'v3.12'
     - name: 'Clone Helm repository'
       uses: actions/checkout@v3
       with:
