--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,8 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags:  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          tags:  
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
   
 
   deployment:
@@ -51,7 +52,7 @@ jobs:
       id: install
     - uses: azure/setup-helm@v3
       with:
-        version: 'v3.12'
+        version: 'v3.12.0'
     - name: 'Clone Helm repository'
       uses: actions/checkout@v3
       with:
