--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc --build",
+    "test": "mocha",
     "lint": "eslint src --ext .ts",
     "prettify": "prettier --write ."
   },
@@ -15,10 +16,15 @@
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "@types/node-fetch": "^2.6.3",
+    "@types/mocha": "^10.0.1",
+    "@types/chai": "^4.3.5",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "prettier": "^2.8.2",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "ts-node": "^10.9.1",
+    "mocha": "^10.2.0",
+    "chai": "^4.3.7"
   },
   "dependencies": {
     "ethers": "^5.7.2",
