--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 env:
-  REGISTRY: https://ghcr.io
+  REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   SERVICE_NAME: marginly-minifront-gitlab
   CLUSTER: kube
