--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -86,6 +86,7 @@ jobs:
     - name: 'deploy'
       run: |
         helm upgrade -i $SERVICE_NAME \
+          -n $NAMESPACE \
           --set fullnameOverride=$SERVICE_NAME \
           --set service.enabled=true \
           --set service.port=80 \
