--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -2,9 +2,13 @@ name: Marginly Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - 'main'
+    tags:
+      - 'v*'
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - 'main'
 
 env:
   REGISTRY: ghcr.io
@@ -32,12 +36,23 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          push: true
-          tags:  
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
   
 
   deployment:
